src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-383 This field serves as a lookup to the Country object</description>
        <inlineHelpText>Read-only field, updated indirectly by a change of Company&apos;s Billing Country</inlineHelpText>
        <label>Account Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountGeography__c</fullName>
        <description>SFDC1-383 This is a calculated field based on country.</description>
        <formula>TEXT(AccountCountry__r.Geography__c)</formula>
        <inlineHelpText>Read-only field referencing Account Country&apos;s geography</inlineHelpText>
        <label>Account Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountID18Character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to return the 18 character system generated Unique Account ID for Account Governance reporting purposes.</inlineHelpText>
        <label>AccountID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInfo__c</fullName>
        <formula>BillingStreet &amp; &quot;, &quot; &amp; BillingCity &amp; &quot;, &quot; &amp; BillingCountry &amp; &quot; (&quot; &amp; TEXT(Status__c) &amp; &quot;, &quot; &amp; TEXT(DataGovernanceStatus__c) &amp; &quot;)&quot;</formula>
        <label>Account Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRegion__c</fullName>
        <description>SFDC1-383 This is a calculated field on the account that displays next to the address and shows the region of the account based on the company address&apos;s country. This is NOT sales region which will be on the User.
Use the country table to find the region and display on the form as read only</description>
        <formula>TEXT(AccountCountry__r.Region__c)</formula>
        <inlineHelpText>Read-only field referencing Account Country&apos;s region.</inlineHelpText>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSubType__c</fullName>
        <description>SFDC1-4380 Account Sub Type dependent picklist is only editable by the profiles that can edit the Account Type field. The field must have a value (and can only have a value) if &quot;Global Alliance&quot; is selected as Account Type.</description>
        <inlineHelpText>For Global Alliance accounts. Please select from picklist.</inlineHelpText>
        <label>Account Sub Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Integration Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalAccountFields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-785 This field is a link to a 1:1 relations ship between Account and Additional Account Fields object.  It is created when a new account is created and is read only. The user can easily click on this field to see the related object.</description>
        <inlineHelpText>Created when a new account is created and is read only.</inlineHelpText>
        <label>Additional Account Fields</label>
        <referenceTo>AdditionalAccountFields__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlternateNameTradingName__c</fullName>
        <description>SFDC1-144 Allows for alternate ways to search for the account.</description>
        <inlineHelpText>Please enter the Alternate Name/Trading Name for this account (multiple values should be separated by a comma in the same field).</inlineHelpText>
        <label>Alternate Name/Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedContractSummaryCount__c</fullName>
        <description>SFDC1-5228 Account Overview Report, Displays the contract count</description>
        <inlineHelpText>Displays the contract count</inlineHelpText>
        <label>Approved Contract Summary Count</label>
        <summaryFilterItems>
            <field>ApprovedContractSummary__c.AnnualContractValue__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ApprovedContractSummary__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BP__c</fullName>
        <description>SFDC1-5223 - This field holds the BP number value and its value cascades to the Contract object in the same field</description>
        <label>BP#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7512 designates that the account owner was assigned through the GAM.  It is possible that this box be marked true and an Account manager is not yet assigned.</description>
        <inlineHelpText>When field is true the account will be identified as part of the CAM (Corporate Account Manager) list.</inlineHelpText>
        <label>CAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComplianceRestrictionException__c</fullName>
        <description>SFDC1-8049 Setting this designation at the Ultimate Parent will cascade the value in the Compliance Restriction field through the hierarchy to all accounts except those designated with a different exception value</description>
        <inlineHelpText>When set at the Ultimate Parent level, this restriction will then display as the Compliance Restriction for all child accounts.  Otherwise, when a child record has a different restriction than the parent, this field allows for that difference to be set.</inlineHelpText>
        <label>Compliance Restriction Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ComplianceRestrictions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplianceRestriction__c</fullName>
        <description>SFDC1-8049 if the Compliance Restriction Exception on the account is null, then set to the Compliance Restriction Exception value of the Ultimate Parent, else set to Compliance Restriction Exception value.</description>
        <formula>IF(!ISBLANK(TEXT(ComplianceRestrictionException__c)), TEXT(ComplianceRestrictionException__c),
   IF(!ISNULL(GlobalUltimateAccount__c), TEXT(GlobalUltimateAccount__r.ComplianceRestrictionException__c), &apos;&apos;)
)</formula>
        <inlineHelpText>Calculated field. If the Compliance Restriction Exception on the account is null, then the Compliance Restriction Exception value of the Ultimate Parent, if any, will display.</inlineHelpText>
        <label>Compliance Restriction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBUpdatedDate__c</fullName>
        <description>SFDC1-7199 D&amp;B Updated Date</description>
        <inlineHelpText>D&amp;B Updated Date</inlineHelpText>
        <label>D&amp;B Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataGovernanceNotes__c</fullName>
        <description>SFDC1-768 &amp; SFDC1-786 Data Governance Notes is record sources for verifying company info when there is not a D&amp;B or EID record, editable only by Data Governance and System Admin.</description>
        <inlineHelpText>Record sources for verifying company information when there is not a D&amp;B nor an EID record.</inlineHelpText>
        <label>Account Governance Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataGovernanceStatus__c</fullName>
        <description>SFDC1-144 Signifies if the account has been validated by the Data Governance Team</description>
        <inlineHelpText>Maintained by the Account Governance team.</inlineHelpText>
        <label>Account Governance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotdelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoNotdelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DomesticUltimateCompanyID__c</fullName>
        <description>SFDC1-7199 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Domestic Ultimate Company DUNS is provided by Customer Master</inlineHelpText>
        <label>Domestic Ultimate Company DUNS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomesticUltimateCompanyName__c</fullName>
        <description>SFDC1-7199 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Maintained by the Account Governance team and populated through the integration with Customer Master data</inlineHelpText>
        <label>Domestic Ultimate Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrgType__c</fullName>
        <description>SFDC1-776 Replaces the Legacy Markit &quot;Account Type&quot; and will be augmented with values relevant to legacy IHS:
Buy Side
Sell Side
Vendor
Supplier
Corporate
Other.

Will be maintained by SF Ops team</description>
        <inlineHelpText>Field maintained by Sales Operations</inlineHelpText>
        <label>External Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>InstitutionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Alliances</fullName>
                </value>
                <value>
                    <fullName>Buy-Side</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Fund Admins</fullName>
                </value>
                <value>
                    <fullName>Official Institutions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sell-Side</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlobalAccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-149 There will be Accounts that are GAM&apos;s and will be identified by the name of the GAM in the GAM Field on the account, this field is a lookup to users. Managing the GAM is in separate stories under the epic of adding the field.
SFDC1-4204 : Updated Lookup filter to allow only Salesforce Users.</description>
        <inlineHelpText>Please enter a Global Account Manager for this account.</inlineHelpText>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>GAMAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-144 Lookup to the existing account that is the Global Ultimate account. Only updated by Customer Master Integration.</description>
        <inlineHelpText>Only updated by CDI Integration.</inlineHelpText>
        <label>Global Ultimate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Ultimate Child Accounts</relationshipLabel>
        <relationshipName>GlobalUltimateChildAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateCompanyID__c</fullName>
        <description>SFDC1-144 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Populated via integration with Customer Master Data</inlineHelpText>
        <label>Global Ultimate Company DUNS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateCompanyName__c</fullName>
        <description>SFDC1-144 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Maintained by the Account Governance team and populated through the integration with Customer Master data</inlineHelpText>
        <label>Global Ultimate Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoldfireExpirationDate__c</fullName>
        <description>SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Goldfire Customer Care</inlineHelpText>
        <label>Goldfire Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IncorporatedIn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4360 This is a look up to the Country Object that allows Sales users to select the Country of Incorporation. Sales user is responsible for editing and maintaining this field.</description>
        <inlineHelpText>Please select the Country of Incorporation for this account.</inlineHelpText>
        <label>Incorporated In</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts (Incorporated In)</relationshipLabel>
        <relationshipName>AccountsIncorporatedIn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InstitutionType__c</fullName>
        <description>SFDC1-1162 related to External Org Type. Will be maintained by SF Ops team.</description>
        <inlineHelpText>Please select Institution Type.</inlineHelpText>
        <label>Institution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Alias Account</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Asset Management - Holding Company</fullName>
                </value>
                <value>
                    <fullName>Bank - Central</fullName>
                </value>
                <value>
                    <fullName>Bank - Development</fullName>
                </value>
                <value>
                    <fullName>Carbon Agency</fullName>
                </value>
                <value>
                    <fullName>Carbon Retailer</fullName>
                </value>
                <value>
                    <fullName>Central Bank/Bank Supervisor</fullName>
                </value>
                <value>
                    <fullName>Clearing</fullName>
                </value>
                <value>
                    <fullName>Commodity Producer</fullName>
                </value>
                <value>
                    <fullName>Consulting and Advisory</fullName>
                </value>
                <value>
                    <fullName>Corporate (Non-Financial)</fullName>
                </value>
                <value>
                    <fullName>Corporate Broker</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>Direct Lender</fullName>
                </value>
                <value>
                    <fullName>Energy Merchants</fullName>
                </value>
                <value>
                    <fullName>Energy Oil or Gas Company</fullName>
                </value>
                <value>
                    <fullName>Energy Trading</fullName>
                </value>
                <value>
                    <fullName>Energy Utilities</fullName>
                </value>
                <value>
                    <fullName>ETF Issuer</fullName>
                </value>
                <value>
                    <fullName>Exchange/Clearer/Trading Venue</fullName>
                </value>
                <value>
                    <fullName>Foundations &amp; Endowments</fullName>
                </value>
                <value>
                    <fullName>Fund Administrator/Custodian/Trustee/Servicer</fullName>
                </value>
                <value>
                    <fullName>Fund of Funds</fullName>
                </value>
                <value>
                    <fullName>Government/Government Research Authority</fullName>
                </value>
                <value>
                    <fullName>Governmental Market/Securities Regulators</fullName>
                </value>
                <value>
                    <fullName>Government Institutions &amp; Regulators</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KingdomExpirationDate__c</fullName>
        <description>SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Kingdom Customer Care</inlineHelpText>
        <label>Kingdom Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: related to Legacy ID and Legacy system, this field is a concatenation of those two fields to create a unique legacy UD that can be used as an external key for updates by the migration team, will not be visible to sales profiles to avoid confusion with related legacy ids object.
This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 When the account is created via migration this field will be populated by the migration with the winning ID of the legacy system.  Please note that all 3 legacy fields listed here are from the highest ranking source. Each source can be found in the related table Legacy Account ID - will not be visible to Sales profiles to avoid confusion with related legacy ids object.</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: related to Legacy ID, this field identifies the legacy system from which the legacy ID is from, will not be visible to Sales profiles to avoid confusion with related legacy ids object</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NotInDataDotCom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-144 Flags accounts created manually without data.com validation.</description>
        <inlineHelpText>Only editable by Data Governance.</inlineHelpText>
        <label>Not in Data.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKIDAccount__c</fullName>
        <description>SFDC1-2445 Every Object contains a PKID.  This is a system generated number in the format Act000000.  It is used as an external ID for identifying records across environments when an update is needed</description>
        <displayFormat>Act{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Generated by Salesforce</inlineHelpText>
        <label>PKID Account</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ParentCompanyID__c</fullName>
        <description>SFDC1-144 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Only updated by Customer Master</inlineHelpText>
        <label>Parent Company DUNS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCompanyName__c</fullName>
        <description>SFDC1-144 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Maintained by the Account Governance team and populated through the integration with Customer Master data</inlineHelpText>
        <label>Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PetraExpirationDate__c</fullName>
        <description>SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Petra Customer Care</inlineHelpText>
        <label>Petra Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreviousOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-470 This is a hidden field to store the Account&apos;s previous owner</description>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PreviousAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>SFDC1-493; to set the Priority of the Account</description>
        <inlineHelpText>Priority 1: with 3+ billable contracts, RRR &gt; $500K; Priority 2: with 2+ billable contracts, RRR &gt; $250K; Priority 3: billable accounts that do not meet P2 criteria; Priority 4: non-billable accounts; PP: Priority Prospect; PD: Priority Development</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1</fullName>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
                <value>
                    <fullName>Priority 4</fullName>
                </value>
                <value>
                    <fullName>Priority Prospect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Priority Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>SFDC1-775 Read Only Calculated field on account. Updated in a daily fashion and audited on change.
If At least 1 Closed won opportunity in last 12 months exists OR contract date is in range for today. Then set to &quot;Customer&quot;
Else if – closed won opportunity &gt; 12 months and no contract date is in range for today. Then set to &quot;Previous Customer&quot;
Else - – everything else &quot;Prospect&quot;</description>
        <inlineHelpText>Specifies current relationship between Account and IHS Markit</inlineHelpText>
        <label>Relationship</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesNotes__c</fullName>
        <description>SFDC1-1407 Long Text field for Sales notes on Account. This was a legacy Markit field</description>
        <inlineHelpText>Any additional information regarding the account like specific instructions, special requests, unique details</inlineHelpText>
        <label>Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SanctionedProhibited__c</fullName>
        <description>SFDC1-7199 Sanctioned/Prohibited status of country in &apos;Incorporated In&apos; field</description>
        <formula>TEXT(IncorporatedIn__r.LegalStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sanctioned/Prohibited status of country</inlineHelpText>
        <label>Sanctioned/Prohibited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-965 and SFDC1-638 Lookup to Case object. This field will be systematically filled when the Account is created from a Case request to the Data Governance team.</description>
        <inlineHelpText>Case from which account was created</inlineHelpText>
        <label>Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateOfIncorporation__c</fullName>
        <description>SFDC1-4360 Account&apos;s State of Incorporation</description>
        <inlineHelpText>This value can be captured for legal reasons, it is mandatory if the Country of Incorporation is United States.</inlineHelpText>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UnitedStatesPicklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>SFDC1-9133 : This field is being used to capture the State value from Case while creating the Accout using the Quick Action &apos;Create New Account&apos;</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-144 Determines if the Account is Active or inactive.</description>
        <inlineHelpText>Please select account status.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>InactiveOutOfBusiness</fullName>
                </value>
                <value>
                    <fullName>InactiveInvalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThreeDigitNAICSCodeDescription__c</fullName>
        <description>SFDC1-7199 3-Digit NAICS Code Description</description>
        <inlineHelpText>Maintained by the Account Governance team and populated through the integration with Customer Master data</inlineHelpText>
        <label>3-Digit NAICS Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreeDigitNAICSCode__c</fullName>
        <description>SFDC1-7199 3-Digit NAICS Code</description>
        <inlineHelpText>Maintained by the Account Governance team and populated through the integration with Customer Master data</inlineHelpText>
        <label>3-Digit NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAnnualContractValue__c</fullName>
        <description>SFDC1-5228 Account Overview Report, Displays the Total Annual Contract value for the account.</description>
        <inlineHelpText>Displays the Total Annual Contract value for the account.</inlineHelpText>
        <label>Total Annual Contract Value</label>
        <summarizedField>ApprovedContractSummary__c.AnnualContractValue__c</summarizedField>
        <summaryForeignKey>ApprovedContractSummary__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UserSalesBusinessLine__c</fullName>
        <description>SFDC1-6544 : used to retrieve Sales Business Line from User record</description>
        <formula>TEXT($User.SalesBusinessLineglobalpicklist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserSalesBusinessLine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VATTaxID__c</fullName>
        <description>SFDC1-563 The company&apos;s tax ID based on which country they are in. Will be populated from D&amp;B when available. Otherwise Sales Support will provide it to the Data Governance Team to update. Editable only by Data Governance and System Admin.</description>
        <inlineHelpText>Please enter account&apos;s VAT/Tax ID</inlineHelpText>
        <label>VAT/Tax ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blee_ID__c</fullName>
        <description>this is a test field added by Matt Henderson</description>
        <externalId>true</externalId>
        <label>blee_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccountsWaitingForValidation</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DataGovernanceStatus__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Accounts waiting for validation</label>
    </listViews>
    <listViews>
        <fullName>AllActiveAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllInactiveAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>InactiveInvalid,InactiveOutOfBusiness</value>
        </filters>
        <label>All Inactive Accounts</label>
    </listViews>
</CustomObject>